# c-octo

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE.txt  Makefile  Readme.md  octo.rc
carts/: test_badcode.8o  test_tiny.8o  test_tiny.json
docs/: BuildGuide.md  OctodeUserGuide.md
scripts/: test_cart.sh  test_compiler.sh
src/: octo_cartridge.h  octo_cli.c  octo_compiler.h  octo_de.c  octo_emulator.h  octo_run.c  octo_util.h
tests/: applejak.8o  applejak.ch8  chickenscratch.8o  chipwar.8o  chipwar.ch8  empty.err  enchilada.8o  enchilada.ch8  err_12bit.8o  err_12bit.err  err_16bit.8o  err_16bit.err  err_16bit_forward.8o  err_16bit_forward.err  err_4bit.8o  err_4bit.err  err_8bit.8o  err_8bit.err  err_again.8o  err_again.err  err_alias_shadow_label.8o  err_alias_shadow_label.err  err_assert.8o  err_assert.err  err_bad_escape.8o  err_bad_escape.err  err_bad_operator.8o  err_bad_operator.err  err_bad_wide_forward.8o  err_bad_wide_forward.err  err_bigliteral.err  err_calc_forward.8o  err_calc_forward.err  err_calc_redefine.8o  err_calc_redefine.err  err_calc_undefined.8o  err_calc_undefined.err  err_const_forward.8o  err_const_forward.err  err_const_redefine.8o  (+96 more)
